--- a/deploy_pocketbase.yml
+++ b/deploy_pocketbase.yml
@@ -1,5 +1,6 @@
 ---
-- name: Deploy Docker image   
+- name: Deploy Docker image
+  connection: local   
   hosts: localhost
   tasks:
     - name: Pull the PocketBase Docker image
