--- a/deploy_pocketbase.yml
+++ b/deploy_pocketbase.yml
@@ -1,6 +1,7 @@
 ---
 - name: Deploy Docker image
   connection: local   
+  become: true
   hosts: localhost
   vars:
     ansible_python_interpreter: /usr/bin/python3
