--- a/deploy_pocketbase.yml
+++ b/deploy_pocketbase.yml
@@ -1,7 +1,9 @@
 ---
 - name: Deploy Docker image
-  become: true
   hosts: localhost
+  become: true
+  become_method: sudo
+  become_user: root
   vars:
     ansible_python_interpreter: /usr/bin/python3
   tasks:
