--- a/deploy_pocketbase.yml
+++ b/deploy_pocketbase.yml
@@ -5,7 +5,7 @@
   tasks:
     - name: Build PocketBase Docker image
       docker_image:
-        name: "{{ host_name }}"
+        name: "pocketbase-{{ pb_version }}"
         source: build
         build:
           path: .
@@ -17,7 +17,7 @@
     - name: Run PocketBase Docker container
       docker_container:
         name: "{{ host_name }}"
-        image: "{{ host_name }}:latest"
+        image: "pocketbase-{{ pb_version }}:latest"
         state: started
         restart_policy: always
         ports:
